docker files created

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:M4oCj33sjXkO8CRxFUQRiukz0LP8sCWFa/dbfv1usgY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://proyectoerp-a7c2.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
